fix distortion issues when resizing window
Also make format media properties in a much cleaner way.

--- a/renderer/components/stylesheets/Menu.scss
+++ b/renderer/components/stylesheets/Menu.scss
@@ -3,6 +3,7 @@
     font-weight: bold;
     width: 180px;
     min-width: 180px;
+    overflow-y: auto;
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: rgb(240, 240, 240);
